--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>TK Remodeling & Roofing | Commercial Tenant Finishes</title>
-  <meta name="description" content="Commercial tenant finishes and large remodels across the Kansas City metro."/>
+  <title>Kansas City Commercial General Contractor | TK Remodeling</title>
+  <meta name="description" content="Licensed & Insured Commercial General Contractor serving Greater Kansas City and Johnson County. Specializing in commercial build-outs, tenant improvements, and spa construction."/>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -12,18 +12,19 @@
 <header class="topbar">
   <div class="container">
     <div class="nav">
-      <div class="brand">
+      <a class="brand" href="index.html">
         <div class="mark">TK</div>
         <div class="name">
-          <strong>TK Remodeling & Roofing</strong>
-          <span>Commercial Tenant Finishes</span>
+          <strong>TK Remodeling</strong>
+          <span>Licensed & Insured General Contractor</span>
         </div>
-      </div>
+      </a>
       <nav class="links">
-        <a href="projects.html">Projects</a>
+        <a href="projects.html">Commercial</a>
+        <a href="residential.html">Residential</a>
+        <a href="restoration.html">Restoration</a>
         <a href="about.html">About</a>
-        <a href="contact.html" class="btn">Contact</a>
-        <a href="contact.html" class="btn primary">Request a Bid</a>
+        <a href="contact.html" class="btn primary">Contact</a>
       </nav>
     </div>
   </div>
@@ -31,95 +32,69 @@
 
 <main>
 
-<section class="hero">
+<section class="section">
   <div class="container">
-    <div class="hero-grid">
-
-      <div>
-        <div class="kicker">General Contractor · Kansas City Metro</div>
-        <h1>Commercial tenant finishes done right.</h1>
-        <p class="sub">
-          TK Remodeling & Roofing specializes in commercial tenant improvements with
-          select large home remodels handled with the same professional process.
-        </p>
-
-        <div style="display:flex; gap:10px; flex-wrap:wrap;">
-          <a href="projects.html" class="btn primary">View Projects</a>
-          <a href="contact.html" class="btn">Get a Quote</a>
-        </div>
-
-        <div class="badges">
-          <div class="badge">Office</div>
-          <div class="badge">Retail</div>
-          <div class="badge">Restaurant</div>
-          <div class="badge">Medical</div>
-        </div>
-      </div>
-
-      <div class="hero-card">
-        <h3>What we do</h3>
-        <div class="stats">
-          <div class="stat">
-            <strong>Tenant Finishes</strong>
-            <span>Primary focus</span>
-          </div>
-          <div class="stat">
-            <strong>Large Remodels</strong>
-            <span>Selective projects</span>
-          </div>
-          <div class="stat">
-            <strong>Clear Schedules</strong>
-            <span>Milestones & updates</span>
-          </div>
-          <div class="stat">
-            <strong>Clean Closeout</strong>
-            <span>Punch & turnover</span>
-          </div>
-        </div>
-      </div>
-
+    <span class="kicker">LICENSED • INSURED • COMMERCIAL FOCUSED</span>
+    <h1>Licensed &amp; Insured General Contractor</h1>
+    <p class="lead">
+      Serving Greater Kansas City and Johnson County, Kansas. Delivering structured commercial
+      build-outs and tenant improvements across the Kansas City metropolitan area.
+    </p>
+    <p>
+      Commercial projects typically ranging from 2,000 to 10,000 square feet,
+      requiring coordinated trades, inspection compliance, and disciplined scheduling.
+    </p>
+    <div class="cta">
+      <a class="btn primary" href="projects.html">View Commercial Projects</a>
+      <a class="btn" href="contact.html">Request Consultation</a>
     </div>
+  </div>
+</section>
+
+<section class="section alt">
+  <div class="container">
+    <h2>Industries Served</h2>
+    <p class="lead">
+      Spa &amp; Salon Build-Outs • Medical • Office • Restaurant • Retail • Convenience
+    </p>
+    <p>
+      Extensive experience delivering spa and nail salon build-outs requiring
+      high-density plumbing layouts, ventilation systems, and coordinated inspection management.
+    </p>
   </div>
 </section>
 
 <section class="section">
   <div class="container">
-    <h2>Our Services</h2>
-    <p class="lead">Commercial-first execution with residential-level craftsmanship.</p>
+    <h2>Why Choose TK Remodeling</h2>
 
-    <div class="cards">
-      <div class="card">
-        <h3>Commercial Tenant Finishes</h3>
-        <p>Office, retail, restaurant, and medical build-outs from demo to final inspection.</p>
+    <div class="grid-2">
+      <div>
+        <h3>Commercial Focus</h3>
+        <p>
+          We concentrate on structured commercial projects requiring coordination
+          across trades, inspections, and regulatory compliance.
+        </p>
       </div>
 
-      <div class="card">
-        <h3>Large Home Remodels</h3>
-        <p>Kitchens, baths, basements, and full remodels using a commercial workflow.</p>
+      <div>
+        <h3>Process-Driven Execution</h3>
+        <p>
+          From defined scope to final inspection, each project follows a disciplined
+          schedule with active oversight and communication.
+        </p>
       </div>
 
-      <div class="card">
-        <h3>Roofing & Exterior</h3>
-        <p>Repairs and replacements supporting both residential and commercial projects.</p>
+      <div>
+        <h3>Specialty Experience</h3>
+        <p>
+          Extensive experience in spa and salon build-outs requiring
+          high-density plumbing, ventilation systems, and inspection coordination.
+        </p>
       </div>
-    </div>
-  </div>
-</section>
 
-</main>
-
-<footer class="footer">
-  <div class="container">
-    <div class="row">
-      <div>© <span id="year"></span> TK Remodeling & Roofing LLC</div>
-      <div class="small">Commercial Tenant Finishes · Kansas City</div>
-    </div>
-  </div>
-</footer>
-
-<script>
-  document.getElementById("year").textContent = new Date().getFullYear();
-</script>
-
-</body>
-</html>
+      <div>
+        <h3>Licensed &amp; Insured</h3>
+        <p>
+          Commercial General Liability Coverage: $1,000,000+.
+          Fully insured and compliant with commercial project requir
