--- a/contact.html
+++ b/contact.html
@@ -35,11 +35,10 @@
     <h2>Request a Project Consultation</h2>
     <p class="lead">
       Provide your project details below and our team will follow up to discuss next steps.
-      For restoration inquiries, this link may direct to our restoration division site later.
     </p>
 
     <div class="card" style="margin-top:14px;">
-      <form class="form" action="mailto:youremail@domain.com" method="post" enctype="text/plain">
+      <form class="form" action="mailto:contact@tkremodel.com" method="post" enctype="text/plain">
         <div class="grid-2">
           <div>
             <label>Full Name</label>
